--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
   <body>
+
+    <div class="container-main">
     <div class="zoom_outer">
       <div id="zoom">
         <img src="1.jpg" alt="zoom">
       </div>
+    </div>
     </div>
 <!-- partial -->
   <script  src="./script.js"></script>
