--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <img src="1.jpg" alt="zoom">
       </div>
     </div>
+
+    <h4>image 2</h4>
+    <div class="zoom_outer">
+      <div id="zoom">
+        <img src="2.jpg" alt="zoom">
+      </div>
+    </div>
     </div>
 <!-- partial -->
   <script  src="./script.js"></script>
